resource/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tallyme-resource
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tallyme-resource
  template:
    metadata:
      labels:
        app: tallyme-resource
    spec:
      enableServiceLinks: false
      containers:
      - name: tallyme-resource
        image: tallyme-resource:dev
        imagePullPolicy: Never
        ports:
        - containerPort: 8081
