resource/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tallyme-resource-service
spec:
  selector:
    app: tallyme-resource
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
