resource/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tallyme-resource-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - tallyme-resource.localhost
  rules:
  - host: tallyme-resource.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tallyme-resource-service
            port:
              number: 8081
